--- a/SplashScreen/.gitignore
+++ b/SplashScreen/.gitignore
@@ -2,3 +2,15 @@
 /Splash.class
 /Welcome$1.class
 /Welcome.class
+/SplashTest.class
+/SplashTest$ResourceLoader.class
+/SplashTest$1.class
+/SplashDemo.class
+/SplashDemo$1.class
+/SplashT$1.class
+/SplashT.class
+/SplashHibernate.class
+/SplashT$2.class
+/UtilGUI.class
+/SplashScreen$1.class
+/SplashScreen.class
