--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /Customer.class
 /Flight.class
 /User.class
+/Login$1.class
+/Login.class
+/Login$2.class
+/Login$3.class
+/Register.class
+/Register$1.class
