--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/JSplashScreen.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/swingx-all-1.6.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Desktop/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/org-netbeans-lib-profiler.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/org-netbeans-lib-uihandler.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/AbsoluteLayout.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ethen/Downloads/jcalendar-1.3.0.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
